--- a/pull_members.html
+++ b/pull_members.html
@@ -4,153 +4,183 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Authorization</title>
-    <!-- Materialize CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --background-dark: #121212;
+            --background-darker: #0a0a0a;
+            --text-primary: #e0e0e0;
+            --text-secondary: #a0a0a0;
+            --accent-primary: #6a11cb;
+            --accent-secondary: #2575fc;
+        }
+
         body {
-            font-family: 'Roboto', sans-serif;
-            transition: background-color 0.3s, color 0.3s;
-            background-color: #121212;
-            color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, var(--background-dark), var(--background-darker));
+            color: var(--text-primary);
+            line-height: 1.6;
         }
-        .dark-mode {
-            background-color: #121212;
-            color: #ffffff;
-        }
-        .light-mode {
-            background-color: #f9f9f9;
-            color: #212121;
-        }
+
         .container {
-            margin-top: 50px;
-            max-width: 600px;
+            width: 100%;
+            max-width: 500px;
+            padding: 20px;
         }
+
         .card {
-            border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            transition: background-color 0.3s ease;
+            background: rgba(30, 30, 30, 0.8);
+            border-radius: 16px;
+            padding: 40px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transform: perspective(1000px) rotateX(10deg);
+            transition: all 0.6s ease;
         }
-        .dark-mode .card {
-            background-color: #1e1e1e;
+
+        .card:hover {
+            transform: rotateX(0deg) scale(1.03);
+            box-shadow: 0 20px 45px rgba(0, 0, 0, 0.4);
         }
-        .light-mode .card {
-            background-color: #ffffff;
+
+        h4 {
+            color: var(--accent-primary);
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 1.8rem;
+            letter-spacing: -0.5px;
         }
-        .btn {
-            transition: transform 0.2s ease, background-color 0.3s ease;
+
+        .input-field {
+            margin-bottom: 20px;
         }
-        .btn:hover {
-            transform: scale(1.05);
+
+        input {
+            width: 100%;
+            padding: 12px;
+            background: rgba(50, 50, 50, 0.5);
+            border: 1px solid rgba(100, 100, 100, 0.2);
+            border-radius: 10px;
+            color: var(--text-primary);
+            font-size: 1rem;
+            transition: border-color 0.3s ease;
         }
-        .btn:focus {
+
+        input:focus {
             outline: none;
+            border-color: var(--accent-secondary);
         }
+
+        .btn {
+            display: block;
+            width: 100%;
+            padding: 14px;
+            border: none;
+            border-radius: 30px;
+            background: linear-gradient(45deg, var(--accent-primary), var(--accent-secondary));
+            color: white;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 7px 15px rgba(0, 0, 0, 0.2);
+        }
+
         #feedback {
             margin-top: 20px;
-            font-size: 1.2em;
-            display: none;
+            text-align: center;
+            font-size: 0.9rem;
         }
+
         .error-message {
-            color: #e53935;
+            color: #ef5350;
         }
+
         .success-message {
-            color: #43a047;
+            color: #66bb6a;
         }
-        .dark-mode .btn {
-            background-color: #1565c0;
+
+        #feedback ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: left;
+            margin-top: 15px;
         }
-        .light-mode .btn {
-            background-color: #2196f3;
+
+        #feedback ul li {
+            background: rgba(50, 50, 50, 0.5);
+            margin-bottom: 8px;
+            padding: 10px;
+            border-radius: 8px;
+            color: var(--text-secondary);
         }
     </style>
 </head>
-<body class="dark-mode">
-
-<div class="container">
-    <div class="switch right-align">
-        <label>
-            Light
-            <input type="checkbox" id="darkModeToggle">
-            <span class="lever"></span>
-            Dark
-        </label>
-    </div>
-    <div class="card">
-        <div class="card-content">
-            <h4 class="card-title center-align">Admin Authorization</h4>
+<body>
+    <div class="container">
+        <div class="card">
+            <h4>Admin Authorization</h4>
             <form id="adminForm">
                 <div class="input-field">
-                    <input type="password" id="admin_code" class="validate" required>
-                    <label for="admin_code">Admin Code</label>
-                    <span class="helper-text" data-error="Admin code is required"></span>
+                    <input type="password" id="admin_code" required placeholder="Enter Admin Code" autocomplete="off">
                 </div>
-                <button type="submit" class="btn waves-effect waves-light">Pull Members</button>
+                <button type="submit" class="btn">Pull Members</button>
             </form>
-            <div id="feedback" class="center-align"></div>
+            <div id="feedback"></div>
         </div>
     </div>
-</div>
 
-<!-- Materialize JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script>
-    // Dark Mode Toggle Logic
-    const darkModeToggle = document.getElementById('darkModeToggle');
-    const body = document.body;
+    <script>
+        const form = document.getElementById('adminForm');
+        const feedback = document.getElementById('feedback');
 
-    darkModeToggle.addEventListener('change', function () {
-        if (this.checked) {
-            body.classList.remove('light-mode');
-            body.classList.add('dark-mode');
-        } else {
-            body.classList.remove('dark-mode');
-            body.classList.add('light-mode');
-        }
-    });
+        form.onsubmit = async function (e) {
+            e.preventDefault();
 
-    // Form Submission Logic
-    const form = document.getElementById('adminForm');
-    const feedback = document.getElementById('feedback');
+            const adminCode = document.getElementById('admin_code').value;
+            feedback.style.display = 'block';
+            feedback.textContent = 'Processing...';
+            feedback.className = 'blue-text';
 
-    form.onsubmit = async function (e) {
-        e.preventDefault();
+            try {
+                const response = await fetch('/pull_members', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ admin_code: adminCode }),
+                });
 
-        const adminCode = document.getElementById('admin_code').value;
-        feedback.style.display = 'block';
-        feedback.textContent = 'Processing...';
-        feedback.className = 'blue-text';
+                const data = await response.json();
 
-        try {
-            const response = await fetch('/pull_members', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ admin_code: adminCode }),
-            });
-
-            const data = await response.json();
-
-            if (response.ok) {
-                feedback.textContent = data.message;
-                feedback.className = 'success-message';
-                if (data.results) {
-                    feedback.innerHTML += '<ul style="text-align:left; margin-top:15px;">';
-                    data.results.forEach(result => {
-                        feedback.innerHTML += `<li>${result}</li>`;
-                    });
-                    feedback.innerHTML += '</ul>';
+                if (response.ok) {
+                    feedback.textContent = data.message;
+                    feedback.className = 'success-message';
+                    if (data.results) {
+                        feedback.innerHTML += '<ul>';
+                        data.results.forEach(result => {
+                            feedback.innerHTML += `<li>${result}</li>`;
+                        });
+                        feedback.innerHTML += '</ul>';
+                    }
+                } else {
+                    feedback.textContent = data.message || 'An error occurred.';
+                    feedback.className = 'error-message';
                 }
-            } else {
-                feedback.textContent = data.message || 'An error occurred.';
+            } catch (error) {
+                feedback.textContent = 'Failed to connect to the server.';
                 feedback.className = 'error-message';
             }
-        } catch (error) {
-            feedback.textContent = 'Failed to connect to the server.';
-            feedback.className = 'error-message';
-        }
-    };
-</script>
-
+        };
+    </script>
 </body>
 </html>
